Fix progress input overflow removed border-radius on big quota from the main settings page

--- a/core/css/inputs.scss
+++ b/core/css/inputs.scss
@@ -478,6 +478,7 @@ progress {
 	border-radius: 3px;
 	flex-basis: 100%;
 	height: 5px;
+	overflow: hidden;
 	&.warn {
 		&::-moz-progress-bar {
 			background: $color-error;
